# HR-Helper

./: .env.example  .gitignore  Dockerfile  MONTH1-RECAP.md  MONTH1-SIMPLE.md  MONTH2-PLAN.md  MONTH2-RECAP.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 679b598f8acb_initial_tables.py  a1b2c3d4e5f6_add_resume_parsing_fields.py
sample_data/resumes/: README.md  sample_resume.docx  sample_resume.txt
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: candidates.py  health.py  jobs.py  matching.py  resumes.py  router.py
src/app/core/: config.py  database.py  exceptions.py  llm.py
src/app/models/: __init__.py  base.py  candidate.py  job.py  resume.py
src/app/schemas/: candidate.py  health.py  job.py  match.py  parsed_resume.py  resume.py
src/app/services/: candidate_service.py  embedding_service.py  job_service.py  matching_service.py  pipeline.py  resume_parser.py  resume_service.py  text_extraction.py
src/app/storage/: base.py  chroma.py  local.py  vector_store.py
tests/: conftest.py
tests/integration/: test_candidate_api.py  test_candidate_service.py  test_embedding_api.py  test_job_api.py  test_job_service.py  test_matching_api.py  test_resume_api.py  test_resume_parsing_api.py
tests/mocks/: mock_vector_store.py
tests/smoke/: test_ai_workflows.py  test_workflows.py
tests/unit/: test_config.py  test_embedding_service.py  test_match_schemas.py  test_matching_service.py  test_parsed_resume_schema.py  test_resume_parser.py  test_schemas.py  test_storage.py  test_text_extraction.py  test_vector_store.py
