[project]
name = "hr-helper"
version = "0.1.0"
description = "HR Recruitment Assistant - AI-powered resume screening and candidate matching"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # File processing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Unit tests (no DB, no I/O)",
    "integration: Integration tests (requires test DB)",
    "smoke: End-to-end workflow tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = [
    "B008",   # Allow Depends() in function defaults (FastAPI pattern)
    "UP046",  # Pydantic doesn't fully support PEP 695 type params yet
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
